--- a/templates/room_settings/new.html.twig
+++ b/templates/room_settings/new.html.twig
@@ -14,3 +14,7 @@
         </section>
     </main>
 {% endblock %}
+{% block javascripts %}
+    {{ parent() }}
+    {{ encore_entry_script_tags('account') }}
+{% endblock %}
