--- a/templates/fragments/navbar.html.twig
+++ b/templates/fragments/navbar.html.twig
@@ -11,6 +11,7 @@
                 {%  else %}
                     <li class="nav-item"><a class="nav-link" href="{{ path('suggestQuestion') }}">Proposer une question</a></li>
                     <li class="nav-item"><a class="nav-link py-0" href="{{ path('account') }}"><h2 class="m-0"><i class="icon ion-ios-contact"></i></h2></a></li>
+                    <li class="nav-item"><a class="nav-link" href="{{ path('showQuestion')}}">Accepter une question</a></li>
                     <li class="nav-item"><a class="nav-link py-0" href="{{ path('logOut') }}"><h2 class="m-0"><i class="icon ion-log-out"></i></h2></a></li>
                 {% endif %}
             </ul>
