--- a/templates/question/acceptQuestion.html.twig
+++ b/templates/question/acceptQuestion.html.twig
@@ -36,54 +36,6 @@
                             <td><a href="{{ path('delete_question', {'id':question.getId()})}}" class="btn btn-danger"></a></td>
                             {#  <td> <a href="" class="btn btn-primary"> Lire la suite </a></td>#}
                         </tr>
-
-                        {#  <tr>
-                        <td>GuessThe<br>Manga<br></td>
-                        <td class="text-justify"><span>De quel manga est tiré cette image ?&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;</span>
-                            <div class="text-center"><img class="w-75 mt-2" src="assets/img/nature/yeahitsrainig.jpg"></div>
-                        </td>
-                        <td>Fullmetal Alchimist Brotherhood.</td>
-                        <td class="bg-success"><button><i class="fa fa-check"></i></button></td>
-                        <td class="bg-info"><button><i class="fa fa-edit"></i></button></td>
-                        <td class="bg-danger text-center"><button><i class="fa fa-remove"></i></button></td>
-                    </tr>
-                    <tr>
-                        <td>Quiz<br>Métier<br><br></td>
-                        <td><br>En quoi consistait le métier de&nbsp;blatier&nbsp;?<br>
-                            <div class="text-center"></div>
-                        </td>
-                        <td><br>Vendeur de blé et autres grains, vendeur de blé, vendeur d'orge, vendeur de l'avoine, récolte grains<br></td>
-                        <td class="bg-success"><button><i class="fa fa-check"></i></button></td>
-                        <td class="bg-info"><button><i class="fa fa-edit"></i></button></td>
-                        <td class="bg-danger text-center"><button><i class="fa fa-remove"></i></button></td>
-                    </tr>
-                    <tr>
-                        <td>GuessThe<br>Fruit</td>
-                        <td><span>Quel est l'appellation de ce fruit<strong> </strong>?&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</span>
-                            <div class="text-center"><img class="w-75 mt-2" src="assets/img/nature/fruit.jpg"></div>
-                        </td>
-                        <td>jujube</td>
-                        <td class="bg-success"><button><i class="fa fa-check"></i></button></td>
-                        <td class="bg-info"><button><i class="fa fa-edit"></i></button></td>
-                        <td id="text" class="bg-danger text-center"><button><i class="fa fa-remove"></i></button></td>
-                    </tr>
-                    <tr>
-                        <td>Quiz<br>Animal</td>
-                        <td><br>Les vers de terre ont-ils un<strong> </strong>coeur ?<br><br></td>
-                        <td>Oui</td>
-                        <td class="bg-success"><button><i class="fa fa-check"></i></button></td>
-                        <td class="bg-info"><button><i class="fa fa-edit"></i></button></td>
-                        <td class="bg-danger text-center"><button><i class="fa fa-remove"></i></button></td>
-                    </tr>
-                    <tr>
-                        <td>Quiz<br>Devinette</td>
-                        <td><br>Ma sœur a autant de frère que de sœurs et mon frère, lui, a deux fois plus de sœurs que de frères. Combien d'enfants dans la fratrie?<br><br></td>
-                        <td>Il y a 3 enfants dans le fratrie.</td>
-                        <td class="bg-success"><button><i class="fa fa-check"></i></button></td>
-                        <td class="bg-info"><button><i class="fa fa-edit"></i></button></td>
-                        <td class="bg-danger text-center"><button><i class="fa fa-remove"></i></button></td>
-                    </tr>
-                        #}
                         <tr></tr>
                         <tr></tr>
                         <tr></tr>
@@ -96,10 +48,9 @@
                             {% for answer in question.answers %}
                                 <td>{{ answer.getTextAnswer() }}<br><br></td>
                             {% endfor %}
-                            <td class="bg-success"><button><i class="fa fa-check"></i></button></td>
-                            <td class="bg-info"><button class="btn"><i class="fas fa-edit"></i></button></td>
-                            <td class="bg-danger text-center"><button class="btn"><i class="fa fa-remove"></i></button></td>
-                            {#<td> <a href="" class="btn btn-primary"> Lire la suite </a></td> #}
+                            <td><a href="{{ path('acceptQuestion', {'id':question.getId()})}}" class="btn btn-success"><i class="fa fa-check"></i></a></td>
+                            <td><a href="{{ path('modify_question', {'id':question.getId()})}}" class="btn btn-info"></a></td>
+                            <td><a href="{{ path('delete_question', {'id':question.getId()})}}" class="btn btn-danger"></a></td>
                         </tr>
                         <tr></tr>
                         <tr></tr>
