--- a/templates/room/index.html.twig
+++ b/templates/room/index.html.twig
@@ -2,24 +2,124 @@
 
 {% block title %}Hello RoomController!{% endblock %}
 
+{% block stylesheets %} {{ encore_entry_link_tags('room') }} {% endblock %}
+
+{% block navbar %}{% endblock %}
+
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
-
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
-
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ 'C:/Users/Aicha/Desktop/S2_L3/Inf8/game/src/Controller/RoomController.php'|file_link(0) }}">src/Controller/RoomController.php</a></code></li>
-        <li>Your template at <code><a href="{{ 'C:/Users/Aicha/Desktop/S2_L3/Inf8/game/templates/room/index.html.twig'|file_link(0) }}">templates/room/index.html.twig</a></code></li>
-    </ul>
-</div>
+    <div id="wrapper">
+        <nav class="navbar navbar-dark align-items-start sidebar sidebar-dark accordion bg-gradient-primary p-0">
+            <div class="container-fluid d-flex flex-column p-0 h-100"><a
+                        class="navbar-brand d-flex justify-content-center align-items-center sidebar-brand m-0"
+                        href="#">
+                    <div class="sidebar-brand-icon rotate-n-15"><i class="icon ion-ios-game-controller-a"></i></div>
+                    <div class="sidebar-brand-text mx-3"><span>Magma</span></div>
+                </a>
+                <hr class="sidebar-divider my-0">
+                <ul class="navbar-nav text-light h-75 d-inline-block" id="accordionSidebar">
+{#                    <li class="nav-item">#}
+{#                        <div class="nav-link active">#}
+{#                            <i class="icon ion-happy"></i>#}
+{#                            <span>Joueur 1</span>#}
+{#                            <span class="badge badge-primary float-right">42</span>#}
+{#                        </div>#}
+{#                    </li>#}
+{#                    <li class="nav-item">#}
+{#                        <div class="nav-link active">#}
+{#                            <i class="icon ion-happy"></i>#}
+{#                            <span>Joueur 2</span>#}
+{#                            <span class="badge badge-primary float-right">100</span>#}
+{#                        </div>#}
+{#                    </li>#}
+{#                    <li class="nav-item">#}
+{#                        <div class="nav-link active">#}
+{#                            <i class="icon ion-happy"></i>#}
+{#                            <span>Joueur 3</span>#}
+{#                            <span class="badge badge-primary float-right">27</span>#}
+{#                        </div>#}
+{#                    </li>#}
+{#                    <li class="nav-item">#}
+{#                        <div class="nav-link active">#}
+{#                            <i class="icon ion-happy"></i>#}
+{#                            <span>Joueur 4</span>#}
+{#                            <span class="badge badge-primary float-right">76</span>#}
+{#                        </div>#}
+{#                    </li>#}
+                </ul>
+                <div class="text-center d-none d-md-inline">
+                    <button class="btn rounded-circle border-0" id="sidebarToggle" type="button"></button>
+                </div>
+            </div>
+        </nav>
+        <div class="d-flex flex-column" id="content-wrapper">
+            <div class="container-fluid h-100 d-flex align-items-end flex-column">
+                <div class="card {#bg-gradient-primary#} shadow my-4 w-100" onselectstart="return false"
+                     oncontextmenu="return false"
+                     ondragstart="return false">
+                    <div class="card-body {#overflow-auto#} {# overflow-hidden #} mb-4" style="height: 80vh;">
+                        <h1 id="question-content-generated" class="h4 unselectable" hidden>De quel * est tirée cette
+                            image ?</h1>
+                        <div class="row h-100">
+                            <div id="question-content" class="col-md-12 my-auto">
+                                {# <table class="table text-center w-50 mx-auto border-top-0"> #}
+                                {# <tbody class="text-light"> #}
+                                {# <tr class=""> #}
+                                {# <th scope="col" style="border-top-left-radius: 15px">#</th> #}
+                                {# <th scope="col">Joueur</th> #}
+                                {# <th scope="col" style="border-top-right-radius: 15px">Score</th> #}
+                                {# </tr> #}
+                                {# <tr> #}
+                                {# <th scope="row">1</th> #}
+                                {# <td>Joueur 2</td> #}
+                                {# <td>100</td> #}
+                                {# </tr> #}
+                                {# <tr> #}
+                                {# <th scope="row">2</th> #}
+                                {# <td>Joueur 4</td> #}
+                                {# <td>76</td> #}
+                                {# </tr> #}
+                                {# <tr> #}
+                                {# <th scope="row">3</th> #}
+                                {# <td>Joueur 1</td> #}
+                                {# <td>42</td> #}
+                                {# </tr> #}
+                                {# <tr> #}
+                                {# <th scope="row">4</th> #}
+                                {# <td>Joueur 3</td> #}
+                                {# <td>27</td> #}
+                                {# </tr> #}
+                                {# </tbody> #}
+                                {# </table> #}
+                                {# <button type="button" #}
+                                {# class="btn btn-light btn-lg rounded-pill mx-auto d-block text-primary"><strong>Commencer</strong> #}
+                                {# </button> #}
+                                {# <h1 class="h1 text-center mx-auto d-block w-auto unselectable">Quel est la capitale de l'Italie ?</h1> #}
+                                {# <img class="rounded mx-auto d-block w-auto unselectable" #}
+                                {# src="{{ asset('./games_images/guess_the/44cafe894c519dc4595f2c4c47a6997c.jpg') }}" #}
+                                {# style="max-height: 70vh; max-width: 100%" alt="?Guess The?"> #}
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row w-100 justify-content-center" hidden>
+                    <button class="btn btn-primary btn-lg">Recommencer</button>
+                </div>
+                <div id="answerDiv" class="card shadow mt-auto mb-4 w-100" hidden>
+                    <div class="card-body p-0 m-0">
+                        <div class="input-group input-group-lg">
+                            <input type="text" class="form-control" placeholder="Réponse"
+                                   aria-label="Answer" aria-describedby="time-addon">
+                            <div class="input-group-append">
+                                <p class="input-group-text bg-primary text-light" id="time-addon">20</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 {% endblock %}
 
 {% block javascripts %}
-    {{ parent() }}
     {{ encore_entry_script_tags('room') }}
 {% endblock %}
