enf of basic game features

--- a/templates/room/index.html.twig
+++ b/templates/room/index.html.twig
@@ -19,42 +19,14 @@
                 <ul class="navbar-nav text-light h-75 d-inline-block" id="accordionSidebar">
                     {% for score in room.scores %}
                         <li class="nav-item" id="div-user-{{ score.guest.id }}">
-                            <div class="nav-link active">
+                            <div class="nav-link active user-info" data-id-player="{{ score.guest.id }}">
                                 <i class="icon ion-happy"></i>
-                                <span>{{ score.guest.pseudo }}</span>
+                                <span class="pseudo">{{ score.guest.pseudo }}</span>
                                 <span id="score-user-{{ score.guest.id }}"
-                                      class="badge badge-primary float-right">{{ score.score }}</span>
+                                      class="badge badge-primary float-right score">{{ score.score }}</span>
                             </div>
                         </li>
                     {% endfor %}
-                    {# <li class="nav-item">
-                        <div class="nav-link active">
-                            <i class="icon ion-happy"></i>
-                            <span>Joueur 1</span>
-                            <span class="badge badge-primary float-right">42</span>
-                        </div>
-                    </li> #}
-                    {# <li class="nav-item"> #}
-                    {# <div class="nav-link active"> #}
-                    {# <i class="icon ion-happy"></i> #}
-                    {# <span>Joueur 2</span> #}
-                    {# <span class="badge badge-primary float-right">100</span> #}
-                    {# </div> #}
-                    {# </li> #}
-                    {# <li class="nav-item"> #}
-                    {# <div class="nav-link active"> #}
-                    {# <i class="icon ion-happy"></i> #}
-                    {# <span>Joueur 3</span> #}
-                    {# <span class="badge badge-primary float-right">27</span> #}
-                    {# </div> #}
-                    {# </li> #}
-                    {# <li class="nav-item"> #}
-                    {# <div class="nav-link active"> #}
-                    {# <i class="icon ion-happy"></i> #}
-                    {# <span>Joueur 4</span> #}
-                    {# <span class="badge badge-primary float-right">76</span> #}
-                    {# </div> #}
-                    {# </li> #}
                 </ul>
                 <div class="text-center d-none d-md-inline">
                     <button class="btn rounded-circle border-0" id="sidebarToggle" type="button"></button>
@@ -72,35 +44,6 @@
                         <h1 id="question-content-generated" class="h4 unselectable"></h1>
                         <div class="row h-100">
                             <div id="question-content" class="col-md-12 my-auto">
-                                {# <table class="table text-center w-50 mx-auto border-top-0"> #}
-                                {# <tbody class="text-light"> #}
-                                {# <tr class=""> #}
-                                {# <th scope="col" style="border-top-left-radius: 15px">#</th> #}
-                                {# <th scope="col">Joueur</th> #}
-                                {# <th scope="col" style="border-top-right-radius: 15px">Score</th> #}
-                                {# </tr> #}
-                                {# <tr> #}
-                                {# <th scope="row">1</th> #}
-                                {# <td>Joueur 2</td> #}
-                                {# <td>100</td> #}
-                                {# </tr> #}
-                                {# <tr> #}
-                                {# <th scope="row">2</th> #}
-                                {# <td>Joueur 4</td> #}
-                                {# <td>76</td> #}
-                                {# </tr> #}
-                                {# <tr> #}
-                                {# <th scope="row">3</th> #}
-                                {# <td>Joueur 1</td> #}
-                                {# <td>42</td> #}
-                                {# </tr> #}
-                                {# <tr> #}
-                                {# <th scope="row">4</th> #}
-                                {# <td>Joueur 3</td> #}
-                                {# <td>27</td> #}
-                                {# </tr> #}
-                                {# </tbody> #}
-                                {# </table> #}
                                 {% if room.startedAt == null %}
                                     {% if room.host == app.user %}
                                         <form id="start-game-form" action="{{ path('startGame', {id: room.id}) }}"method="POST">
